--- a/package.json
+++ b/package.json
@@ -7,7 +7,25 @@
   "main": "index.js",
   "author": "Yang Mingshan <y.mingshan3@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "format": "prettier --check \"**/*.{js,ts,json,md}\"",
+    "lint": "eslint .",
+    "type": "tsc --noEmit",
+    "prepare": "husky"
+  },
   "peerDependencies": {
     "@vue-mini/pinia": "^0.1.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/node": "^22.13.9",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0"
   }
 }
