--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "pinia-mini-plugin-persistor",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "type": "module",
   "packageManager": "pnpm@10.6.1",
   "description": "Persistence plugin for @vue-mini/pinia",
-  "main": "index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm-bundler.js",
+  "types": "dist/index.d.ts",
+  "repository": "https://github.com/yangmingshan/pinia-mini-plugin-persistor.git",
   "author": "Yang Mingshan <y.mingshan3@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -13,11 +16,38 @@
     "type": "tsc --noEmit",
     "prepare": "husky"
   },
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.esm-bundler.js",
+      "require": "./dist/index.cjs.js",
+      "default": "./dist/index.cjs.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "keywords": [
+    "persistence",
+    "pinia",
+    "vue",
+    "mini",
+    "vue-mini",
+    "wechat",
+    "weixin",
+    "miniprogram",
+    "mp",
+    "微信",
+    "小程序"
+  ],
   "peerDependencies": {
     "@vue-mini/pinia": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.13.9",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
@@ -25,6 +55,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.3",
+    "rollup": "^4.35.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0"
   }
