--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --check \"**/*.{js,ts,json,md}\"",
     "lint": "eslint .",
     "type": "tsc --noEmit",
+    "build": "node build.ts",
     "prepare": "husky"
   },
   "files": [
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.13.9",
