--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "小程序"
   ],
   "peerDependencies": {
+    "@vue-mini/core": "^1.2.2",
     "@vue-mini/pinia": "^0.1.1"
   },
   "devDependencies": {
