test: add tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,7 @@ jobs:
       - run: pnpm format
       - run: pnpm lint
       - run: pnpm type
+      - run: pnpm test --coverage
+      - uses: codecov/codecov-action@v5
+        with:
+          fail_ci_if_error: true
