--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --check \"**/*.{js,ts,json,md}\"",
     "lint": "eslint .",
     "type": "tsc --noEmit",
+    "test": "vitest",
     "build": "node build.ts",
     "prepare": "husky"
   },
@@ -52,6 +53,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.13.10",
+    "@vitest/coverage-v8": "^3.0.8",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
@@ -61,6 +63,12 @@
     "rollup": "^4.35.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1"
+    "typescript-eslint": "^8.26.1",
+    "vitest": "^3.0.8"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
