--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["src", "build.ts", "global.d.ts"]
+  "include": ["src", "__tests__", "build.ts", "global.d.ts", "vitest.config.ts"]
 }
