build: move noCheck to tsconfig.build.json

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": { "noCheck": true },
   "exclude": ["__tests__", "build.ts", "vitest.config.ts"]
 }
